--- a/src/scss/static/_about.scss
+++ b/src/scss/static/_about.scss
@@ -2,25 +2,33 @@
 //! <----- Mobile ------>
 .about-container {
    width: 100%;
-   margin-top: 75px;
-   margin-bottom: 250px;
+   margin-top: 90px;
    color: white;
+   height: 100vh;
    h2 {
       font-weight: $heading;
       font-size: 20px;
       color: $accent;
    }
    p {
-      font-size: 15px;
+      font-size: 13px;
       width: 400px;
       line-height: 20px;
+   }
+   @media screen and (max-width: 499px) {
+      height: 100vh;
+      margin-bottom: 20px;
+      p {
+         font-size: 12px;
+         width: 90%;
+         margin: auto;
+      }
    }
    .app-info,
    .tmdb-info,
    .react-info {
       background-color: rgba(#1a1e2b, 0.95);
       backdrop-filter: $defBlur;
-      margin-top: 20px;
       margin-bottom: 20px;
       width: 95%;
       height: 150px;
@@ -31,6 +39,10 @@
       justify-content: center;
       align-items: center;
       border-radius: 3px;
+      @media screen and (max-width: 499px) {
+         height: auto;
+         padding: 20px;
+      }
    }
    .app-info {
       h2 {
