--- a/src/scss/static/_footer.scss
+++ b/src/scss/static/_footer.scss
@@ -11,6 +11,12 @@ footer {
    width: 100%;
    height: 125px;
    font-weight: $text;
+   @media screen and (max-width: 499px) {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      height: 250px;
+   }
    @media screen and (min-width: 1050px) {
       align-items: center;
       height: 75px;
@@ -21,9 +27,11 @@ footer {
       padding: 15px;
       .footer-large-text {
          font-size: 12px;
+         font-weight: $subHeading;
+         margin-bottom: 3px;
       }
       .footer-normal-text {
-         font-size: 12px;
+         font-size: 10px;
       }
    }
 
@@ -31,6 +39,11 @@ footer {
    .column01 {
       .react-logo {
          display: flex;
+         flex-direction: row;
+         align-items: center;
+         svg {
+            margin-right: 3px;
+         }
       }
    }
 
