--- a/src/scss/static/_sidebar.scss
+++ b/src/scss/static/_sidebar.scss
@@ -116,6 +116,7 @@
    left: 0px;
    z-index: 999;
    height: 100vh;
+   width: 100%;
    animation: slide-in-bottom 0.4s cubic-bezier(0.86, 0, 0.07, 1) both;
 }
 
